<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_margin="5dp"
            android:id="@+id/img_post"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/img_post"
            android:gravity="center_vertical">

            <TextView
                android:padding="3dp"
                android:id="@+id/name_post"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/username" />
        </LinearLayout>

        <TextView
            android:padding="5dp"
            android:id="@+id/title_post"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_post"
            android:text="@string/post_title" />

        <TextView
            android:id="@+id/post_post"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_post"
            android:text="@string/post_body" />

        <LinearLayout
            android:layout_below="@+id/post_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:backgroundTintMode="screen"
                android:layout_weight="1"
                android:id="@+id/like_post"
                android:layout_width="match_parent"
                android:background="#0347856C"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_border_black_24dp"
                android:contentDescription="@string/todo" />

            <ImageView
                android:backgroundTintMode="screen"
                android:background="#0347856C"
                android:layout_weight="1"
                android:id="@+id/post_coment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mode_comment_black_24dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>
        <TextView
            android:id="@+id/textViewOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/_8942"
            android:textAppearance="?android:textAppearanceLarge"
            tools:ignore="RelativeOverlap,RtlSymmetry" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>



</RelativeLayout>